--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helpers/General.php"
+            "app/Helpers/General.php",
+            "app/Helpers/Validation.php"
         ]
     },
     "autoload-dev": {
@@ -40,7 +41,8 @@
             "Tests\\": "tests/"
         },
         "files": [
-            "app/Helpers/General.php"
+            "app/Helpers/General.php",
+            "app/Helpers/Validation.php"
         ]
     },
     "scripts": {
