--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
+            "app/Helpers/Model.php",
             "app/Helpers/General.php",
             "app/Helpers/Validation.php"
         ]
@@ -41,6 +42,7 @@
             "Tests\\": "tests/"
         },
         "files": [
+            "app/Helpers/Model.php",
             "app/Helpers/General.php",
             "app/Helpers/Validation.php"
         ]
